master

0.3.5

  * Temple::HTML::Pretty improved
  * :sort_attrs option (default: true) added to HTML::AttributeMerger;
    if set to false, the attributes will appear in the insertion order
  * Temple::Mixins::EngineDSL api changed ("wildcard" is deprecated, use "use" instead)
  * Temple::Mixins::CompiledDispatcher supports arbitrary levels now
  * Don't use gsub! on incoming strings (#57)
  * Fix newlines in erb parser (#46)

0.3.4

  * Bugfix release (0.3.3 was yanked)

0.3.3

  * Support for rails 3.1 streaming
  * Add EngineDSL#wildcard
  * HTML::Fast/Pretty supports only :xhtml and :html formats from now on
  * HTML::AttributeMerger extracted from HTML::Fast

0.3.1, 0.3.2

  * Don't modify strings destructively with gsub! in HTML::Pretty.
    This doesn't work with Rails safe buffers in version >= 3.0.8.

0.3.0

  * Compiled expression dispatching
  * Method temple_dispatch is obsolete
  * EscapeHTML renamed to Escapable
  * Control flow filter added
  * HTML filter: Tag and attribute expressions changed
  * Expression grammar added
  * Expression validator added
  * Debugger filter removed (Validator is better replacement)

0.2.0

  * Add mutable/immutable hashes for option inheritance
  * Rails template support added
  * Rename Filter#compile to Filter#call
  * Engine chain reconfiguration (append, prepend, replace, ...)
  * HTML filter: Don't output empty attributes
  * Escape expression changed [:escape, true/false, Expression]

0.1.8

  * HTML filter: Support :format => :html (alias for :html5)

0.1.7

  * HTML::Pretty indents dynamic content only if it doesn't contain
    preformatted tags

0.1.6

  * Flexible chain building

0.1.5

  * Default options for engines

0.1.4

  * HTML::Pretty added
  * Tilt-based template class added
  * Escaping filter added
  * Filter base class added
  * Fix capturing (Issue #15)

0.1.3

  * Close issue #10
  * Refactoring

0.1.2

  * Add HTML filter
  * Remove Escapable filter