@@ -46,5 +46,6 @@ module Temple
     autoload :Pretty,             'temple/html/pretty'
     autoload :AttributeMerger,    'temple/html/attribute_merger'
     autoload :AttributeSorter,    'temple/html/attribute_sorter'
+    autoload :AttributeRemover,   'temple/html/attribute_remover'
   end
 end
